# data_recarding_v3

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: build.yml  windows.yml
